# arm-tools-simple_stm32f4

./: CMakeLists.txt  README.md  main.cpp
McuPoject/: CMakeLists.txt
McuPoject/.project/: conan_profile  conanfile.py  project_init.cmake
McuPoject/Include/: Driver.hpp
McuPoject/Source/: main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.cpp
McuPoject/cubemx/: .mxproject  CMakeLists.txt  logger.ioc
McuPoject/cubemx/Core/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
McuPoject/cubemx/Core/Src/: main.cpp  stm32f4xx_it.c  stm32f4xx_it.cpp
McuPoject/cubemx/cmake/: gcc-arm-none-eabi.cmake
McuPoject/cubemx/cmake/stm32cubemx/: CMakeLists.txt
SomeTests/: CMakeLists.txt  SimpleTest.cpp
SomeTests/.project/: Linux_build_conan_profile  Linux_host_conan_profile  Macos_build_conan_profile  conanfile.py  project_init.cmake
SomeTests/.stcproj/: Macos_host_conan_profile  Windows_build_conan_profile  Windows_host_conan_profile  project_init.cmake
